--- a/Dumuzid/Config/DefaultEngine.ini
+++ b/Dumuzid/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Dumuzid
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/Levels/Level1.Level1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -65,5 +65,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
